--- a/LUA/css/estilos.css
+++ b/LUA/css/estilos.css
@@ -857,7 +857,7 @@ header.abajo,
 }
 .ptxt-horario{
     color: var(--color7);
-    margin-top: 10px;
+    margin: 10px;
     text-align: center;
     font-size: 20px;
 }
